GNOME Bugzilla – Bug 643103
user accounts: wrong invisible char
Last modified: 2011-03-02 17:50:27 UTC
The fake 'invisible label' for the password still uses the tiny dots, even though cantarell now has a nice big bullet. We probably need to either steal the gtk fallback code that is trying different characters, or use an entry and probe it for the invisible char
Created attachment 181789 [details] [review] patch
commit 14e503fa2cf8776853e5d7e1be94258cb2015b85 Author: Matthias Clasen <mclasen@redhat.com> Date: Wed Feb 23 21:46:37 2011 -0500 User accounts: Get the invisible char to use from GTK+ https://bugzilla.gnome.org/show_bug.cgi?id=643103