User accounts: Get the invisible char to use from GTK+

https://bugzilla.gnome.org/show_bug.cgi?id=643103